--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,10 +2,10 @@ branch-defaults:
   main:
     environment: null
 global:
-  application_name: reviewflask
+  application_name: cifar_10
   branch: main
   default_ec2_keyname: null
-  default_platform: Python 3.8
+  default_platform: Python 3.7
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
